unified-quant-platform/app_v9_final.log
  File "/root/.openclaw/workspace/unified-quant-platform/app_v9_final.py", line 528
    app.run(host=port=7000, debug=False)'0.0.0.0', port=7000, debug=False)
                                                                         ^
SyntaxError: unmatched ')'
